#5 Spec and code fixes for null/required workaround
