# YNAB.SDK/Model/Category.cs
@@ -1,10 +1,10 @@
-/* 
+/*
  * YNAB API Endpoints
  *
  * Our API uses a REST based design, leverages the JSON data format, and relies upon HTTPS for transport. We respond with meaningful HTTP response codes and if an error occurs, we include error details in the response body.  API Documentation is at https://api.youneedabudget.com
  *
  * The version of the OpenAPI document: 1.0.0
- * 
+ *
  * Generated by: https://github.com/openapitools/openapi-generator.git
  */
 
@@ -32,6 +32,45 @@ namespace YNAB.SDK.Model
     public partial class Category :  IEquatable<Category>, IValidatableObject
     {
         /// <summary>
+        /// The type of goal, if the cagegory has a goal (TB&#x3D;Target Category Balance, TBD&#x3D;Target Category Balance by Date, MF&#x3D;Monthly Funding)
+        /// </summary>
+        /// <value>The type of goal, if the cagegory has a goal (TB&#x3D;Target Category Balance, TBD&#x3D;Target Category Balance by Date, MF&#x3D;Monthly Funding)</value>
+        [JsonConverter(typeof(StringEnumConverter))]
+        public enum GoalTypeEnum
+        {
+            /// <summary>
+            /// Enum TB for value: TB
+            /// </summary>
+            [EnumMember(Value = "TB")]
+            TB = 1,
+
+            /// <summary>
+            /// Enum TBD for value: TBD
+            /// </summary>
+            [EnumMember(Value = "TBD")]
+            TBD = 2,
+
+            /// <summary>
+            /// Enum MF for value: MF
+            /// </summary>
+            [EnumMember(Value = "MF")]
+            MF = 3,
+
+            /// <summary>
+            /// Enum NEED for value: NEED
+            /// </summary>
+            [EnumMember(Value = "NEED")]
+            NEED = 4
+
+        }
+
+        /// <summary>
+        /// The type of goal, if the cagegory has a goal (TB&#x3D;Target Category Balance, TBD&#x3D;Target Category Balance by Date, MF&#x3D;Monthly Funding)
+        /// </summary>
+        /// <value>The type of goal, if the cagegory has a goal (TB&#x3D;Target Category Balance, TBD&#x3D;Target Category Balance by Date, MF&#x3D;Monthly Funding)</value>
+        [DataMember(Name="goal_type", EmitDefaultValue=false)]
+        public GoalTypeEnum? GoalType { get; set; }
+        /// <summary>
         /// Initializes a new instance of the <see cref="Category" /> class.
         /// </summary>
         [JsonConstructorAttribute]
@@ -43,13 +82,18 @@ namespace YNAB.SDK.Model
         /// <param name="categoryGroupId">categoryGroupId (required).</param>
         /// <param name="name">name (required).</param>
         /// <param name="hidden">Whether or not the category is hidden (required).</param>
+        /// <param name="originalCategoryGroupId">If category is hidden this is the id of the category group it originally belonged to before it was hidden..</param>
         /// <param name="note">note (required).</param>
         /// <param name="budgeted">Budgeted amount in milliunits format (required).</param>
         /// <param name="activity">Activity amount in milliunits format (required).</param>
         /// <param name="balance">Balance in milliunits format (required).</param>
-        /// <param name="goalTarget">The goal target amount in milliunits (required).</param>
+        /// <param name="goalType">The type of goal, if the cagegory has a goal (TB&#x3D;Target Category Balance, TBD&#x3D;Target Category Balance by Date, MF&#x3D;Monthly Funding).</param>
+        /// <param name="goalCreationMonth">The month a goal was created.</param>
+        /// <param name="goalTarget">The goal target amount in milliunits.</param>
+        /// <param name="goalTargetMonth">If the goal type is &#39;TBD&#39; (Target Category Balance by Date), this is the target month for the goal to be completed.</param>
+        /// <param name="goalPercentageComplete">The percentage completion of the goal.</param>
         /// <param name="deleted">Whether or not the category has been deleted.  Deleted categories will only be included in delta requests. (required).</param>
-        public Category(Guid id = default(Guid), Guid categoryGroupId = default(Guid), string name = default(string), bool hidden = default(bool), string note = default(string), long budgeted = default(long), long activity = default(long), long balance = default(long), long goalTarget = default(long), bool deleted = default(bool))
+        public Category(Guid id = default(Guid), Guid categoryGroupId = default(Guid), string name = default(string), bool hidden = default(bool), Guid originalCategoryGroupId = default(Guid), string note = default(string), long budgeted = default(long), long activity = default(long), long balance = default(long), GoalTypeEnum? goalType = default(GoalTypeEnum?), DateTime goalCreationMonth = default(DateTime), long goalTarget = default(long), DateTime goalTargetMonth = default(DateTime), int goalPercentageComplete = default(int), bool deleted = default(bool))
         {
             // to ensure "id" is required (not null)
             if (id == null)
@@ -131,16 +175,6 @@ namespace YNAB.SDK.Model
                 this.Balance = balance;
             }
 
-            // to ensure "goalTarget" is required (not null)
-            if (goalTarget == null)
-            {
-                throw new InvalidDataException("goalTarget is a required property for Category and cannot be null");
-            }
-            else
-            {
-                this.GoalTarget = goalTarget;
-            }
-
             // to ensure "deleted" is required (not null)
             if (deleted == null)
             {
@@ -151,8 +185,14 @@ namespace YNAB.SDK.Model
                 this.Deleted = deleted;
             }
 
+            this.OriginalCategoryGroupId = originalCategoryGroupId;
+            this.GoalType = goalType;
+            this.GoalCreationMonth = goalCreationMonth;
+            this.GoalTarget = goalTarget;
+            this.GoalTargetMonth = goalTargetMonth;
+            this.GoalPercentageComplete = goalPercentageComplete;
         }
-        
+
         /// <summary>
         /// Gets or Sets Id
         /// </summary>
@@ -177,6 +217,13 @@ namespace YNAB.SDK.Model
         /// <value>Whether or not the category is hidden</value>
         [DataMember(Name="hidden", EmitDefaultValue=false)]
         public bool Hidden { get; set; }
+
+        /// <summary>
+        /// If category is hidden this is the id of the category group it originally belonged to before it was hidden.
+        /// </summary>
+        /// <value>If category is hidden this is the id of the category group it originally belonged to before it was hidden.</value>
+        [DataMember(Name="original_category_group_id", EmitDefaultValue=false)]
+        public Guid? OriginalCategoryGroupId { get; set; }
 
         /// <summary>
         /// Gets or Sets Note
@@ -206,11 +253,34 @@ namespace YNAB.SDK.Model
         public long Balance { get; set; }
 
         /// <summary>
+        /// The month a goal was created
+        /// </summary>
+        /// <value>The month a goal was created</value>
+        [DataMember(Name="goal_creation_month", EmitDefaultValue=false)]
+        [JsonConverter(typeof(OpenAPIDateConverter))]
+        public DateTime? GoalCreationMonth { get; set; }
+
+        /// <summary>
         /// The goal target amount in milliunits
         /// </summary>
         /// <value>The goal target amount in milliunits</value>
         [DataMember(Name="goal_target", EmitDefaultValue=false)]
         public long GoalTarget { get; set; }
+
+        /// <summary>
+        /// If the goal type is &#39;TBD&#39; (Target Category Balance by Date), this is the target month for the goal to be completed
+        /// </summary>
+        /// <value>If the goal type is &#39;TBD&#39; (Target Category Balance by Date), this is the target month for the goal to be completed</value>
+        [DataMember(Name="goal_target_month", EmitDefaultValue=false)]
+        [JsonConverter(typeof(OpenAPIDateConverter))]
+        public DateTime? GoalTargetMonth { get; set; }
+
+        /// <summary>
+        /// The percentage completion of the goal
+        /// </summary>
+        /// <value>The percentage completion of the goal</value>
+        [DataMember(Name="goal_percentage_complete", EmitDefaultValue=false)]
+        public int? GoalPercentageComplete { get; set; }
 
         /// <summary>
         /// Whether or not the category has been deleted.  Deleted categories will only be included in delta requests.
@@ -231,16 +301,21 @@ namespace YNAB.SDK.Model
             sb.Append("  CategoryGroupId: ").Append(CategoryGroupId).Append("\n");
             sb.Append("  Name: ").Append(Name).Append("\n");
             sb.Append("  Hidden: ").Append(Hidden).Append("\n");
+            sb.Append("  OriginalCategoryGroupId: ").Append(OriginalCategoryGroupId).Append("\n");
             sb.Append("  Note: ").Append(Note).Append("\n");
             sb.Append("  Budgeted: ").Append(Budgeted).Append("\n");
             sb.Append("  Activity: ").Append(Activity).Append("\n");
             sb.Append("  Balance: ").Append(Balance).Append("\n");
+            sb.Append("  GoalType: ").Append(GoalType).Append("\n");
+            sb.Append("  GoalCreationMonth: ").Append(GoalCreationMonth).Append("\n");
             sb.Append("  GoalTarget: ").Append(GoalTarget).Append("\n");
+            sb.Append("  GoalTargetMonth: ").Append(GoalTargetMonth).Append("\n");
+            sb.Append("  GoalPercentageComplete: ").Append(GoalPercentageComplete).Append("\n");
             sb.Append("  Deleted: ").Append(Deleted).Append("\n");
             sb.Append("}\n");
             return sb.ToString();
         }
-  
+
         /// <summary>
         /// Returns the JSON string presentation of the object
         /// </summary>
@@ -270,47 +345,70 @@ namespace YNAB.SDK.Model
             if (input == null)
                 return false;
 
-            return 
+            return
                 (
                     this.Id == input.Id ||
                     (this.Id != null &&
                     this.Id.Equals(input.Id))
-                ) && 
+                ) &&
                 (
                     this.CategoryGroupId == input.CategoryGroupId ||
                     (this.CategoryGroupId != null &&
                     this.CategoryGroupId.Equals(input.CategoryGroupId))
-                ) && 
+                ) &&
                 (
                     this.Name == input.Name ||
                     (this.Name != null &&
                     this.Name.Equals(input.Name))
-                ) && 
+                ) &&
                 (
                     this.Hidden == input.Hidden ||
                     this.Hidden.Equals(input.Hidden)
-                ) && 
+                ) &&
+                (
+                    this.OriginalCategoryGroupId == input.OriginalCategoryGroupId ||
+                    (this.OriginalCategoryGroupId != null &&
+                    this.OriginalCategoryGroupId.Equals(input.OriginalCategoryGroupId))
+                ) &&
                 (
                     this.Note == input.Note ||
                     (this.Note != null &&
                     this.Note.Equals(input.Note))
-                ) && 
+                ) &&
                 (
                     this.Budgeted == input.Budgeted ||
                     this.Budgeted.Equals(input.Budgeted)
-                ) && 
+                ) &&
                 (
                     this.Activity == input.Activity ||
                     this.Activity.Equals(input.Activity)
-                ) && 
+                ) &&
                 (
                     this.Balance == input.Balance ||
                     this.Balance.Equals(input.Balance)
-                ) && 
+                ) &&
+                (
+                    this.GoalType == input.GoalType ||
+                    this.GoalType.Equals(input.GoalType)
+                ) &&
+                (
+                    this.GoalCreationMonth == input.GoalCreationMonth ||
+                    (this.GoalCreationMonth != null &&
+                    this.GoalCreationMonth.Equals(input.GoalCreationMonth))
+                ) &&
                 (
                     this.GoalTarget == input.GoalTarget ||
                     this.GoalTarget.Equals(input.GoalTarget)
-                ) && 
+                ) &&
+                (
+                    this.GoalTargetMonth == input.GoalTargetMonth ||
+                    (this.GoalTargetMonth != null &&
+                    this.GoalTargetMonth.Equals(input.GoalTargetMonth))
+                ) &&
+                (
+                    this.GoalPercentageComplete == input.GoalPercentageComplete ||
+                    this.GoalPercentageComplete.Equals(input.GoalPercentageComplete)
+                ) &&
                 (
                     this.Deleted == input.Deleted ||
                     this.Deleted.Equals(input.Deleted)
@@ -333,12 +431,20 @@ namespace YNAB.SDK.Model
                 if (this.Name != null)
                     hashCode = hashCode * 59 + this.Name.GetHashCode();
                 hashCode = hashCode * 59 + this.Hidden.GetHashCode();
+                if (this.OriginalCategoryGroupId != null)
+                    hashCode = hashCode * 59 + this.OriginalCategoryGroupId.GetHashCode();
                 if (this.Note != null)
                     hashCode = hashCode * 59 + this.Note.GetHashCode();
                 hashCode = hashCode * 59 + this.Budgeted.GetHashCode();
                 hashCode = hashCode * 59 + this.Activity.GetHashCode();
                 hashCode = hashCode * 59 + this.Balance.GetHashCode();
+                hashCode = hashCode * 59 + this.GoalType.GetHashCode();
+                if (this.GoalCreationMonth != null)
+                    hashCode = hashCode * 59 + this.GoalCreationMonth.GetHashCode();
                 hashCode = hashCode * 59 + this.GoalTarget.GetHashCode();
+                if (this.GoalTargetMonth != null)
+                    hashCode = hashCode * 59 + this.GoalTargetMonth.GetHashCode();
+                hashCode = hashCode * 59 + this.GoalPercentageComplete.GetHashCode();
                 hashCode = hashCode * 59 + this.Deleted.GetHashCode();
                 return hashCode;
             }
